# zapply

./: .cursorrules  .dockerignore  .env.example  .env.production.example  .gitignore  AI_MATCHING_REPORT.md  CLAUDE.md  DEPLOYMENT.md  Dockerfile  Dockerfile.prod  GITHUB_SECRETS_SETUP.md  GOOD_MORNING_VANJA.md  Justfile  README.md  SESSION_NOTES.md  alembic.ini  clean_database.py  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: claude-code-review.yml  claude.yml  deploy.yml
alembic/: env.py
alembic/versions/: 2025_11_24_1854-05f5ffa9592b_initial_tables.py  2025_11_24_2025-4ad0465d37bb_add_runs_table_for_tracking_pipeline_.py  2025_11_24_2051-79ff1cda179f_add_logs_field_to_runs_table.py  2025_11_25_0905-888d2d4282fa_add_index_on_match_score.py  2025_11_25_0949-20d096e53f38_add_trigger_type_to_run_model.py  2025_11_25_1359-ef8b8dca7d0d_add_phone_cv_storage_custom_.py  2025_11_25_1446-04726265c457_add_app_settings_table.py  (+15 more)
app/: __init__.py  ai_models.py  config.py  database.py  main.py  models.py  schemas.py
data/: admin_settings.json
docs/: ai-matching.md  ai.md  applier-instructions.md  dailyremote.md  final-polish.md  himalayas.md  initial-prompt.md  interviews.md  remotive.md  scrapping.md  weworkremotely.md
frontend/: Dockerfile  Dockerfile.prod  index.html  nginx.conf  package-lock.json  package.json  playwright.config.js
scripts/: README.md  clean_database.py  clean_jobs_runs.py  deploy.sh  init_user_profile.py  setup-github-runner.sh  setup-nas.sh  test_applier.py  test_scraper.py  test_scraper_simple.py
(+53 files in other folders)
